Address many findbugs warnings